@@ -48,9 +48,8 @@ foreach my $module ( sort keys %modules ) {
 # to prevent failing the test. It should be an absolute last resort.
 # Go away and try to find a way to not have Wx stuff in your code first.
 my %TODO = map { $_ => 1 } qw(
-	Padre::Action::Tools
-	Padre::Action::Queue
-	Padre::Actions
+	Padre::ActionLibrary
+	Padre::ActionQueue
 	Padre::Document
 	Padre::File::FTP
 	Padre::Locale
